// Vitest Snapshot v1

exports[`Field > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-2 {
  margin-bottom: 10px;
  font-weight: 700;
  font-size: 16px;
}

.emotion-4 {
  color: #ff0000;
}

.emotion-6 {
  font-family: inherit;
  font-size: 14px;
  font-weight: 500;
  padding: 10px 15px;
  border-radius: 10px;
  border: 1px solid #365463;
  background-color: #fff;
  color: #365463;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-6::-webkit-input-placeholder {
  color: #365463;
  opacity: 1;
}

.emotion-6::-moz-placeholder {
  color: #365463;
  opacity: 1;
}

.emotion-6:-ms-input-placeholder {
  color: #365463;
  opacity: 1;
}

.emotion-6::placeholder {
  color: #365463;
  opacity: 1;
}

.emotion-8 {
  font-size: 13px;
  color: red;
}

<div
    class="emotion-0 emotion-1"
  >
    <label
      class="emotion-2 emotion-3"
      for="test"
    >
      Test
      <i
        aria-hidden="true"
        class="emotion-4 emotion-5"
      >
        *
      </i>
    </label>
    <input
      aria-describedby="test-error"
      aria-invalid="true"
      aria-required="true"
      class="emotion-6 emotion-7"
      id="test"
    />
    <p
      class="emotion-8 emotion-9"
      id="test-error"
      role="alert"
    >
      Error
    </p>
  </div>
</DocumentFragment>
`;

exports[`Field > should render custom input 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-2 {
  margin-bottom: 10px;
  font-weight: 700;
  font-size: 16px;
}

.emotion-4 {
  color: #ff0000;
}

.emotion-6 {
  font-size: 13px;
  color: red;
}

<div
    class="emotion-0 emotion-1"
  >
    <label
      class="emotion-2 emotion-3"
      for="test"
    >
      Test
      <i
        aria-hidden="true"
        class="emotion-4 emotion-5"
      >
        *
      </i>
    </label>
    <textarea
      aria-describedby="test-error"
      aria-invalid="true"
      aria-required="true"
      id="test"
    />
    <p
      class="emotion-6 emotion-7"
      id="test-error"
      role="alert"
    >
      Error
    </p>
  </div>
</DocumentFragment>
`;
